--- a/examples/documentation.html
+++ b/examples/documentation.html
@@ -17,7 +17,7 @@
     <script>
 
         function expandall(name) {
-            $('#ul_' + name).show().find("li").click();
+            $('#ul_' + name).find("li").click();
         }
 
         function expandchart(name) {
@@ -70,6 +70,7 @@
                 'multiBarHorizontal',
                 'multiBar',
                 'legend',
+                'axis',
                 'sparkline',
                 'discreteBar'
             ].sort();
@@ -278,9 +279,6 @@
         <div id="optionjump"></div>
 
         <div style="height: 50px"></div>
-		
-		<h3 class="option"><span class="expand all">[ <a href="javascript:$('#optionlist>ul').toggle()">toggle all</a> ]</span></h3>
-		
         <div id="optionlist"></div>
 
     </section>
@@ -678,11 +676,6 @@ as well as used to print out examples using those example inputs.
             default: "0.5",
             examples: [0.75]
         },
-        legendPosition: {
-            desc: "Position of the legend (top or right)",
-            default: "top",
-            examples: ["top", "right"]
-        },
         labelSunbeamLayout: {
             desc: "?",
             default: false,
@@ -742,12 +735,6 @@ as well as used to print out examples using those example inputs.
                 {stacked: "Stack It", stream: "Stream dat", expanded: "Xpand"},
                 {grouped: "Group em", stacked: "Stack em"}
             ]
-        },
-        groupSpacing: {
-            desc: "The padding between bar groups, this is passed as the padding attribute of rangeBands",
-            refs: ["https://github.com/mbostock/d3/wiki/Ordinal-Scales#ordinal_rangeBands"],
-            default: 0.1,
-            examples: [0.5]
         }
     };
 </script>
