--- a/test/pieChartTest.html
+++ b/test/pieChartTest.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link href="../build/nv.d3.css" rel="stylesheet" type="text/css">
+<link href="../src/nv.d3.css" rel="stylesheet" type="text/css">
 <link href="teststyle.css" rel="stylesheet" type='text/css'>
-<script src="../bower_components/d3/d3.js"></script>
-<script src="../build/nv.d3.js"></script>
 <style>
 
 body {
@@ -60,6 +58,13 @@ text {
   <svg></svg>
 </div>
 
+<script src="../lib/d3.v3.js"></script>
+<script src="../nv.d3.js"></script>
+<script src="../src/tooltip.js"></script>
+<script src="../src/models/legend.js"></script>
+<script src="../src/models/pie.js"></script>
+<script src="../src/models/pieChart.js"></script>
+<script src="../src/utils.js"></script>
 <script>
 
 var testdata = [
